gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/deprecate1553.d
version https://git-lfs.github.com/spec/v1
oid sha256:6097754fd1246017b965ccb7a588d7316eb6b52f01d480414e4756a9e0b02067
size 269
